--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Karol Novljaković",
   "license": "ISC",
   "dependencies": {
-    "jQuery": "^1.7.4"
+    "jQuery": "^1.7.4",
+    "vivus": "^0.4.3"
   }
 }
